--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,9 @@
 ignore =
     W503
 exclude =
-    tests/,
-    */migrations/,
-    venv/,
+    tests/
+    */migrations/
+    venv/
     env/
 per-file-ignores =
     */settings.py:E501
