--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,11 +8,11 @@ services:
     env_file:
       - ./.env
   web:
-    image: denispakharenko/yamdb:v1.0
+    image: denispakharenko/api_yamdb:latest
     restart: always
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/     
+      - static_value:/app/api_yamdb/static/
+      - media_value:/app/api_yamdb/media/
     depends_on:
       - db
     env_file:
